--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -3,7 +3,21 @@ google_analytics: "G-Q4TKS77KCP"
 
 defaults:
   - scope:
-      path: "" # Specifies where the docs are located.
-      type: "default" # Defines the type for docs.
+      path: "./*.md" # Specifies where the docs are located.
     values:
-      layout: default # Defines the template type used for docs (templates are located in the "_layouts" folder). 
+      layout: docs # Defines the template type used for docs (templates are located in the "_layouts" folder).
+  - scope:
+      # NEED TO CONFIRM THIS PATH. IT WORKS WITH ONE ASTERISK, BUT ONLY FILES IN THE docs FOLDER GET REDIRECTED. FILES IN THE SUBDIRECTORIES DON'T REDIRECT.
+      path: "./applications/**/*.md" # Specifies where the docs are located.
+    values:
+      layout: docs # Defines the template type used for docs (templates are located in the "_layouts" folder).
+  - scope:
+      # NEED TO CONFIRM THIS PATH. IT WORKS WITH ONE ASTERISK, BUT ONLY FILES IN THE docs FOLDER GET REDIRECTED. FILES IN THE SUBDIRECTORIES DON'T REDIRECT.
+      path: "./ca/*.md" # Specifies where the docs are located.
+    values:
+      layout: docs # Defines the template type used for docs (templates are located in the "_layouts" folder).
+  - scope:
+      path: "javadoc" # Specifies where the docs are located.
+      type: "none" # Defines the type for docs.
+    values:
+      layout: none # Defines the template type used for docs (templates are located in the "_layouts" folder).
