--- a/docs/applications/simple-bank-account/app/build.gradle
+++ b/docs/applications/simple-bank-account/app/build.gradle
@@ -11,8 +11,8 @@ plugins {
     id 'java'
     id 'application'
     id 'idea'
-    id "org.springframework.boot" version "2.1.1.RELEASE"
-    id "io.spring.dependency-management" version "1.0.6.RELEASE"
+    id "org.springframework.boot" version "3.3.0"
+    id "io.spring.dependency-management" version "1.1.5"
 }
 
 application {
