--- a/docs/applications/simple-bank-account/app/build.gradle
+++ b/docs/applications/simple-bank-account/app/build.gradle
@@ -34,6 +34,10 @@ java {
     }
 }
 
+tasks.named('test') {
+    useJUnitPlatform()
+}
+
 group = 'com.scalar.application.simple-bank-account'
 version = '0.1'
 
@@ -42,6 +46,7 @@ dependencies {
         exclude module: 'logback-classic'
     }
     implementation group: 'com.scalar-labs', name: 'scalardl-java-client-sdk', version: '2.0.4'
-    testImplementation group: 'junit', name: 'junit', version: '4.12'
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.2'
+    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
     testImplementation 'org.assertj:assertj-core:3.9.1'
 }
