add missing log4j dependency and use log4j explicitly

--- a/docs/applications/simple-bank-account/app/build.gradle
+++ b/docs/applications/simple-bank-account/app/build.gradle
@@ -43,8 +43,9 @@ version = '0.1'
 
 dependencies {
     implementation('org.springframework.boot:spring-boot-starter-web') {
-        exclude module: 'logback-classic'
+        exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
     }
+    implementation 'org.springframework.boot:spring-boot-starter-log4j2'
     implementation group: 'com.scalar-labs', name: 'scalardl-java-client-sdk', version: '3.9.1'
     testImplementation 'org.junit.jupiter:junit-jupiter:5.10.2'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
