prepare client.properties for app and contract, respectively

--- a/docs/applications/simple-bank-account/contract/conf/client.properties
+++ b/docs/applications/simple-bank-account/contract/conf/client.properties
@@ -17,12 +17,12 @@ scalar.dl.client.cert_holder_id=user1
 #scalar.dl.client.cert_version=1
 
 # Required. The path of the certificate file.
-scalar.dl.client.cert_path=./conf/client.pem
+scalar.dl.client.cert_path=conf/client.pem
 
 # Required. The path of a corresponding private key file to the certificate.
 # Exceptionally it can be empty in some requests to privileged services
 # such as registerCertificate and registerFunction since they don't need a signature.
-scalar.dl.client.private_key_path=./conf/client-key.pem
+scalar.dl.client.private_key_path=conf/client-key.pem
 
 # Optional. A flag to enable TLS communication. False by default.
 scalar.dl.client.tls.enabled=false
