fix path to config files and move register file into contract directory

--- a/docs/applications/simple-bank-account/app/src/main/resources/application.properties
+++ b/docs/applications/simple-bank-account/app/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-client.properties.path=conf/client.properties
+client.properties.path=../conf/client.properties
 
 # Contract ids
 contract.id.account-history=account-history
