--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,7 +1,19 @@
+FROM docker.io/busybox:1.36 AS tools
+
+ENV DOCKERIZE_VERSION v0.6.1
+
+# Install dockerize
+RUN set -x && \
+    wget -q "https://github.com/jwilder/dockerize/releases/download/${DOCKERIZE_VERSION}/dockerize-linux-amd64-${DOCKERIZE_VERSION}.tar.gz" && \
+    tar -xzvf "dockerize-linux-amd64-${DOCKERIZE_VERSION}.tar.gz" && \
+    ./dockerize --version
+
 FROM eclipse-temurin:8-jre-jammy
 
 RUN apt-get update && apt-get upgrade -y \
  && rm -rf /var/lib/apt/lists/*
+
+COPY --from=tools dockerize /usr/local/bin/
 
 WORKDIR /scalar
 
@@ -10,8 +22,8 @@ WORKDIR /scalar
 # ledger.tar to build/docker.
 ADD ./client.tar .
 
-COPY client.properties.for.docker ./client.properties
-COPY log4j2.properties .
+COPY client.properties.tmpl .
+COPY log4j2.properties.tmpl .
 
 RUN groupadd -r --gid 201 scalar && \
     useradd -r --uid 201 -g scalar scalar
@@ -19,6 +31,8 @@ RUN chown -R scalar:scalar /scalar
 
 USER 201
 
-ENV JAVA_OPTS -Dlog4j.configurationFile=file:log4j2.properties
+ENV JAVA_OPTS -Dlog4j.configurationFile=file:/tmp/log4j2.properties
 
-CMD ["tail", "-f", "/dev/null"]
+CMD ["dockerize", "-template", "client.properties.tmpl:/tmp/client.properties", \
+    "-template", "log4j2.properties.tmpl:/tmp/log4j2.properties", \
+    "tail", "-f", "/dev/null"]
