--- a/ledger/build.gradle
+++ b/ledger/build.gradle
@@ -87,7 +87,7 @@ applicationDistribution.into('bin') {
 
 docker {
     name "ghcr.io/scalar-labs/scalar-ledger:$dockerVersion"
-    files tasks.distTar.outputs, 'conf/ledger.properties.for.docker', 'conf/log4j2.properties', 'docker-entrypoint.sh'
+    files tasks.distTar.outputs, 'conf/ledger.properties.tmpl', 'conf/log4j2.properties.tmpl', 'docker-entrypoint.sh'
 }
 
 task integrationTestCassandra(type: Test) {
