Apply patch to revert to 3.10

--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,7 @@ subprojects {
     apply plugin: 'java-library-distribution'
     apply plugin: 'com.diffplug.spotless'
 
-    project.version = '4.0.0-SNAPSHOT'
+    project.version = '3.10.0'
 
     ext {
         grpcVersion = '1.68.1'
@@ -19,26 +19,26 @@ subprojects {
         guiceVersion = '5.1.0'
         guavaVersion = '32.1.3-jre'
         slf4jVersion = '1.7.36'
-        log4jVersion = '2.24.3'
+        log4jVersion = '2.24.1'
         jsonpVersion = '1.1.4'
-        jacksonVersion = '2.18.2'
+        jacksonVersion = '2.18.1'
         toml4jVersion = '0.7.2'
         scalarDbVersion = '3.14.0'
         scalarAdminVersion = '2.2.1'
         resilience4jRetryVersion = '1.7.1'
-        dropwizardMetricsVersion = '4.2.29'
+        dropwizardMetricsVersion = '4.2.28'
         prometheusVersion = '0.16.0'
-        jettyVersion = '9.4.57.v20241219'
-        assertjVersion = '3.27.2'
-        junitVersion = '5.11.4'
-        junitPlatformVersion = '1.11.4'
+        jettyVersion = '9.4.56.v20240826'
+        assertjVersion = '3.26.3'
+        junitVersion = '5.11.3'
+        junitPlatformVersion = '1.11.3'
         mockitoVersion = '4.11.0'
         errorproneVersion = '2.10.0'
         errorproneJavacVersion = '9+181-r4173-1'
         errorpronePluginVersion = '2.0.2'
         spotbugsVersion = '4.8.6'
         spotbugsPluginVersion = '5.2.5'
-        commonsTextVersion = '1.13.0'
+        commonsTextVersion = '1.12.0'
         stefanbirknerSystemLambdaVersion = '1.2.1'
         googleJavaFormatVersion = '1.7'
         dockerPluginVersion = '0.34.0'
