Revive Junit4-based test actions

--- a/.github/workflows/scalar.yml
+++ b/.github/workflows/scalar.yml
@@ -84,8 +84,8 @@ jobs:
       - name: Run integration tests
         run: |
           cd ledger
-          java -cp "build/test-libs/*:build/libs/*:build/classes/java/integrationTest" org.junit.platform.console.ConsoleLauncher execute -c=com.scalar.dl.ledger.service.LedgerServiceIntegrationTest
-          java -cp "build/test-libs/*:build/libs/*:build/classes/java/integrationTest" -Dscalardb.storage=jdbc -Dscalardb.contact_points=jdbc:mysql://localhost/ -Dscalardb.username=root -Dscalardb.password=mysql org.junit.platform.console.ConsoleLauncher execute -c=com.scalar.dl.ledger.service.LedgerServiceEndToEndTest
+          java -cp "build/test-libs/*:build/libs/*:build/classes/java/integrationTest" org.junit.runner.JUnitCore com.scalar.dl.ledger.service.LedgerServiceIntegrationTest
+          java -cp "build/test-libs/*:build/libs/*:build/classes/java/integrationTest" -Dscalardb.storage=jdbc -Dscalardb.contact_points=jdbc:mysql://localhost/ -Dscalardb.username=root -Dscalardb.password=mysql org.junit.runner.JUnitCore com.scalar.dl.ledger.service.LedgerServiceEndToEndTest
 
   integration-test-with-mysql-jdbc-transaction:
     name: Integration test with JDBC transaction manager on MySQL
@@ -120,7 +120,7 @@ jobs:
       - name: Run integration tests
         run: |
           cd ledger
-          java -cp "build/test-libs/*:build/libs/*:build/classes/java/integrationTest" -Dscalardb.storage=jdbc -Dscalardb.contact_points=jdbc:mysql://localhost/ -Dscalardb.username=root -Dscalardb.password=mysql -Dscalardb.transaction_manager=jdbc org.junit.platform.console.ConsoleLauncher execute -c=com.scalar.dl.ledger.service.LedgerServiceEndToEndTest
+          java -cp "build/test-libs/*:build/libs/*:build/classes/java/integrationTest" -Dscalardb.storage=jdbc -Dscalardb.contact_points=jdbc:mysql://localhost/ -Dscalardb.username=root -Dscalardb.password=mysql -Dscalardb.transaction_manager=jdbc org.junit.runner.JUnitCore com.scalar.dl.ledger.service.LedgerServiceEndToEndTest
 
   permission-test:
     name: Permission test
@@ -150,4 +150,4 @@ jobs:
       - name: Run permission tests
         run: |
           cd ledger
-          java -cp "build/test-libs/*:build/libs/*:build/classes/java/permissionTest" org.junit.platform.console.ConsoleLauncher execute -c=com.scalar.dl.ledger.service.LedgerServicePermissionTest
+          java -cp "build/test-libs/*:build/libs/*:build/classes/java/permissionTest" org.junit.runner.JUnitCore com.scalar.dl.ledger.service.LedgerServicePermissionTest
