Add release workflows

--- a/ledger/build.gradle
+++ b/ledger/build.gradle
@@ -185,3 +185,12 @@ task copyTestJarsToTestLib(type: Copy) {
 test.dependsOn += copyTestJarsToTestLib
 test.dependsOn += compileIntegrationTestJava
 test.dependsOn += compilePermissionTestJava
+
+archivesBaseName = "scalardl-ledger"
+
+// for archiving and uploading to maven central
+if (!project.gradle.startParameter.taskNames.isEmpty() &&
+   (project.gradle.startParameter.taskNames[0].endsWith('publish') ||
+    project.gradle.startParameter.taskNames[0].endsWith('publishToMavenLocal'))) {
+    apply from: 'archive.gradle'
+}
