Preparing development version 3.8.5-SNAPSHOT

--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ subprojects {
     apply plugin: 'jacoco'
     apply plugin: 'java-library-distribution'
 
-    project.version = '3.8.4'
+    project.version = '3.8.5-SNAPSHOT'
 
     ext {
         grpcVersion = '1.68.1'
