--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -14,6 +14,10 @@ updates:
     ignore:
       - dependency-name: "*"
         update-types: [ "version-update:semver-major" ]
+      - dependency-name: "com.diffplug.spotless"
+      - dependency-name: "com.google.errorprone:*"
+      - dependency-name: "com.github.spotbugs:*"
+      - dependency-name: "com.palantir.docker"
 
   # For GitHub Actions, update all actions on the default, support and release branches
   - package-ecosystem: "github-actions"
