--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ subprojects {
     apply plugin: 'jacoco'
     apply plugin: 'java-library-distribution'
 
-    project.version = '3.8.5-SNAPSHOT'
+    project.version = '3.8.5'
 
     ext {
         grpcVersion = '1.68.1'
