Change ref for vuln-check reusable workflow

--- a/.github/workflows/vuln-check.yaml
+++ b/.github/workflows/vuln-check.yaml
@@ -21,7 +21,7 @@ on:
 
 jobs:
   call-vuln-check:
-    uses: scalar-labs/actions/.github/workflows/vuln-check-reusable.yaml@main
+    uses: scalar-labs/actions/.github/workflows/vuln-check-reusable.yaml@vuln-check-artifacts
     with:
       target-ref: ${{ inputs.target-ref }}
       find-latest-release: ${{ inputs.find-latest-release }}
