--- a/.github/workflows/storage-compatibility-check.yaml
+++ b/.github/workflows/storage-compatibility-check.yaml
@@ -100,8 +100,12 @@ jobs:
       # due to a gradle bug we must run the integration test separately
       - name: Run integration tests
         working-directory: ledger
+        # The heap size (-Xmx6g) and direct memory size (-XX:MaxDirectMemorySize=4g) were chosen
+        # to handle high memory demands of the Cosmos DB emulator during integration tests,
+        # ensuring stability and avoiding out-of-memory errors.
         run: |
-          java -cp "build/test-libs/*;build/libs/*;build/classes/java/integrationTest" `
+          java -Xmx6g -XX:MaxDirectMemorySize=4g `
+          -cp "build/test-libs/*;build/libs/*;build/classes/java/integrationTest" `
           "-Dscalardb.storage=cosmos" `
           "-Dscalardb.contact_points=https://localhost:8081/" `
           "-Dscalardb.password=C2y6yDjf5/R+ob0N8A7Cgv30VRDJIWEHLM+4QDU5DE2nQ9nDuVTqobD4b8mGGyPMbIZnqyMsEcaGQy67XIw/Jw==" `
