Add ClientService and CLI for Table Store

--- a/client/build.gradle
+++ b/client/build.gradle
@@ -1,4 +1,5 @@
 plugins {
+    id 'java-test-fixtures'
     id 'com.palantir.docker' version "${dockerPluginVersion}"
     id 'net.ltgt.errorprone' version "${errorpronePluginVersion}"
     id "com.github.spotbugs" version "${spotbugsPluginVersion}"
@@ -32,6 +33,10 @@ dependencies {
     api group: 'javax.json', name: 'javax.json-api', version: "${jsonpVersion}"
     api group: 'org.glassfish', name: 'javax.json', version: "${jsonpVersion}"
     api group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: "${jacksonVersion}"
+
+    // for tests
+    testFixturesImplementation group: 'info.picocli', name: 'picocli', version: "${picoCliVersion}"
+    testFixturesImplementation group: 'org.assertj', name: 'assertj-core', version: "${assertjVersion}"
 
     // for Error Prone
     errorprone "com.google.errorprone:error_prone_core:${errorproneVersion}"
