--- a/table-store/build.gradle
+++ b/table-store/build.gradle
@@ -3,10 +3,18 @@ plugins {
     id "com.github.spotbugs" version "${spotbugsPluginVersion}"
 }
 
+apply plugin:'application'
+startScripts.enabled = false
+
 dependencies {
     implementation project(':client')
     implementation project(':generic-contracts')
+    implementation project(':ledger') // to use JacksonBasedContract
+    implementation group: 'info.picocli', name: 'picocli', version: "${picoCliVersion}"
     implementation group: 'org.partiql', name: 'partiql-parser', version: "${partiqlVersion}"
+
+    // for test
+    testImplementation testFixtures(project(':client')) // to use CommandLineTestUtils
 
     // for Error Prone
     errorprone "com.google.errorprone:error_prone_core:${errorproneVersion}"
@@ -16,6 +24,18 @@ dependencies {
     spotbugs "com.github.spotbugs:spotbugs:${spotbugsVersion}"
     compileOnly "com.github.spotbugs:spotbugs-annotations:${spotbugsVersion}"
     testCompileOnly "com.github.spotbugs:spotbugs-annotations:${spotbugsVersion}"
+}
+
+task TableStore(type: CreateStartScripts) {
+    mainClass = 'com.scalar.dl.tablestore.client.tool.TableStoreCommandLine'
+    applicationName = 'scalardl-table-store'
+    outputDir = new File(project.buildDir, 'tmp')
+    classpath = jar.outputs.files + project.configurations.runtimeClasspath
+}
+
+applicationDistribution.into('bin') {
+    from(TableStore)
+    fileMode = 0755
 }
 
 spotless {
