Use JReleaser to release artifacts in Maven Central

--- a/client/archive.gradle
+++ b/client/archive.gradle
@@ -1,5 +1,4 @@
 apply plugin: 'maven-publish'
-apply plugin: 'signing'
 
 publishing {
     publications {
@@ -42,17 +41,7 @@ publishing {
     }
     repositories {
         maven {
-            def releasesRepoUrl = "https://oss.sonatype.org/service/local/staging/deploy/maven2"
-            def snapshotsRepoUrl = "https://oss.sonatype.org/content/repositories/snapshots"
-            url = version.endsWith('SNAPSHOT') ? snapshotsRepoUrl : releasesRepoUrl
-            credentials {
-                username = "${ossrhUsername}"
-                password = "${ossrhPassword}"
-            }
+            url = url = layout.buildDirectory.dir('staging-deploy')
         }
     }
-}
-
-signing {
-    sign publishing.publications.mavenJava
 }
