--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,15 @@
 plugins {
     id("com.diffplug.spotless") version "6.13.0"
+    id("org.jreleaser") version "1.19.0"
 }
+
+ext {
+    projectGroup = 'com.scalar-labs'
+    projectVersion = '4.0.0-SNAPSHOT'
+}
+
+group = projectGroup
+version = projectVersion
 
 subprojects {
     apply plugin: 'java'
@@ -10,7 +19,7 @@ subprojects {
     apply plugin: 'java-library-distribution'
     apply plugin: 'com.diffplug.spotless'
 
-    project.version = '4.0.0-SNAPSHOT'
+    project.version = projectVersion
 
     ext {
         grpcVersion = '1.73.0'
@@ -111,5 +120,43 @@ subprojects {
     task dockerfileLint(type: Exec) {
         description 'Lint the Dockerfile'
         executable "${rootDir}/scripts/docker/lint.sh"
+    }
+}
+
+jreleaser {
+    gitRootSearch = true
+
+    signing {
+        active = 'ALWAYS'
+        armored = true
+    }
+
+    deploy {
+        maven {
+            mavenCentral {
+                sonatype {
+                    active = 'ALWAYS'
+                    url = 'https://central.sonatype.com/api/v1/publisher'
+                    stagingRepository('client/build/staging-deploy')
+                    stagingRepository('common/build/staging-deploy')
+                    stagingRepository('ledger/build/staging-deploy')
+                    stagingRepository('rpc/build/staging-deploy')
+                }
+            }
+            nexus2 {
+                'snapshot-deploy' {
+                    active = 'SNAPSHOT'
+                    snapshotUrl = 'https://central.sonatype.com/repository/maven-snapshots/'
+                    applyMavenCentralRules = true
+                    snapshotSupported = true
+                    closeRepository = true
+                    releaseRepository = true
+                    stagingRepository('client/build/staging-deploy')
+                    stagingRepository('common/build/staging-deploy')
+                    stagingRepository('ledger/build/staging-deploy')
+                    stagingRepository('rpc/build/staging-deploy')
+                }
+            }
+        }
     }
 }
