--- a/rpc/archive.gradle
+++ b/rpc/archive.gradle
@@ -40,17 +40,7 @@ publishing {
     }
     repositories {
         maven {
-            def releasesRepoUrl = "https://oss.sonatype.org/service/local/staging/deploy/maven2"
-            def snapshotsRepoUrl = "https://oss.sonatype.org/content/repositories/snapshots"
-            url = version.endsWith('SNAPSHOT') ? snapshotsRepoUrl : releasesRepoUrl
-            credentials {
-                username = "${ossrhUsername}"
-                password = "${ossrhPassword}"
-            }
+            url = url = layout.buildDirectory.dir('staging-deploy')
         }
     }
-}
-
-signing {
-    sign publishing.publications.mavenJava
 }
