--- a/client/archive.gradle
+++ b/client/archive.gradle
@@ -41,7 +41,7 @@ publishing {
     }
     repositories {
         maven {
-            url = url = layout.buildDirectory.dir('staging-deploy')
+            url = layout.buildDirectory.dir('staging-deploy')
         }
     }
 }
