--- a/ledger/archive.gradle
+++ b/ledger/archive.gradle
@@ -39,7 +39,7 @@ publishing {
     }
     repositories {
         maven {
-            url = url = layout.buildDirectory.dir('staging-deploy')
+            url = layout.buildDirectory.dir('staging-deploy')
         }
     }
 }
