--- a/common-test/build.gradle
+++ b/common-test/build.gradle
@@ -3,18 +3,12 @@ plugins {
     id "com.github.spotbugs" version "${spotbugsPluginVersion}"
 }
 
-apply plugin:'application'
-startScripts.enabled = false
-
 dependencies {
     implementation project(':client')
-    implementation project(':generic-contracts')
-    implementation project(':ledger') // to use JacksonBasedContract
     implementation group: 'info.picocli', name: 'picocli', version: "${picoCliVersion}"
-    implementation group: 'org.partiql', name: 'partiql-parser', version: "${partiqlVersion}"
-
-    // for test
-    testImplementation project(':common-test')
+    implementation group: 'org.assertj', name: 'assertj-core', version: "${assertjVersion}"
+    implementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: "${junitVersion}"
+    runtimeOnly group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: "${junitVersion}"
 
     // for Error Prone
     errorprone "com.google.errorprone:error_prone_core:${errorproneVersion}"
@@ -24,18 +18,6 @@ dependencies {
     spotbugs "com.github.spotbugs:spotbugs:${spotbugsVersion}"
     compileOnly "com.github.spotbugs:spotbugs-annotations:${spotbugsVersion}"
     testCompileOnly "com.github.spotbugs:spotbugs-annotations:${spotbugsVersion}"
-}
-
-task TableStore(type: CreateStartScripts) {
-    mainClass = 'com.scalar.dl.tablestore.client.tool.TableStoreCommandLine'
-    applicationName = 'scalardl-table-store'
-    outputDir = new File(project.buildDir, 'tmp')
-    classpath = jar.outputs.files + project.configurations.runtimeClasspath
-}
-
-applicationDistribution.into('bin') {
-    from(TableStore)
-    fileMode = 0755
 }
 
 spotless {
@@ -64,9 +46,4 @@ spotbugsMain.reports {
 
 spotbugsTest.reports {
     html.enabled = true
-}
-
-task sourcesJar(type: Jar) {
-    classifier = 'sources'
-    from sourceSets.main.allSource
 }
