--- a/settings.gradle
+++ b/settings.gradle
@@ -4,5 +4,6 @@ include 'rpc'
 include 'client'
 include 'schema-loader'
 include 'generic-contracts'
+include 'hash-store'
 include 'table-store'
 include 'common-test'
